// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Custom/Style Default 1`] = `
<storybook-wrapper>
  <storybook-button-component
    _ngcontent-a-c12=""
    _nghost-a-c13=""
    ng-reflect-text="Button with custom styles"
  >
    <button
      _ngcontent-a-c13=""
    >
      Button with custom styles
    </button>
  </storybook-button-component>
</storybook-wrapper>
`;

exports[`Storyshots Custom/Style With Knobs 1`] = `
<storybook-wrapper>
  <storybook-button-component
    _ngcontent-a-c14=""
    _nghost-a-c15=""
    ng-reflect-text="Button with custom styles"
  >
    <button
      _ngcontent-a-c15=""
    >
      Button with custom styles
    </button>
  </storybook-button-component>
</storybook-wrapper>
`;
